--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Build-Branch
 
 # Controls when the workflow will run
 on:
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
-         repository: 'https://github.com/spinell/FuseEngine'
+         repository: 'spinell/FuseEngine'
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
