--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -22,11 +22,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-         repository: 'spinell/FuseEngine'
-
+          repository: spinell/FuseEngine
+          submodules: recursive
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
