--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -18,15 +18,21 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
+      - name: Checkout Public
+        uses: actions/checkout@v4
+        with:
+          repository: spinell/3DGame
+          submodules: recursive
+
+      - name: Checkout Private
         uses: actions/checkout@v4
         with:
           repository: spinell/FuseEngine
           submodules: recursive
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
