--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -33,8 +33,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: spinell/FuseEngine
-          token: ${{ secrets.PUBLIC_PAT }}
+          token: ${{ secrets.pat }}
           submodules: recursive
+      
+      - name: Run a one-line script
+        run: ls -la .
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
