--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: spinell/FuseEngine
-          token: ${{ secrets.pat }}
+          token: ${{ secrets.PAT }}
           submodules: recursive
       
       - name: Run a one-line script
