--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -21,30 +21,20 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-      - name: Checkout Public
-        uses: actions/checkout@v4
-        with:
-          repository: spinell/3DGame
-          path: 3DGame
-          token: ${{ secrets.PUBLIC_PAT }}
-          submodules: recursive
-
-      - name: Checkout Private
+      - name: Checkout FuseEngine
         uses: actions/checkout@v4
         with:
           repository: spinell/FuseEngine
+          ref: dev
           token: ${{ secrets.PAT }}
           submodules: recursive
-      
-      - name: Run a one-line script
-        run: ls -la .
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          pwd
+          ls -la .
+
+      # Runs a set of commands using the runners shell
+      - name: CMake Configure
+        run: cmake --preset gcc-14-debug
