--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -34,7 +34,12 @@ jobs:
         run: |
           pwd
           ls -la .
+          env
+          ninja --version
+          cmake --version
 
       # Runs a set of commands using the runners shell
       - name: CMake Configure
         run: cmake --preset gcc-14-debug
+        env:
+          VCPKG_ROOT: $VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
