--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -41,3 +41,12 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: CMake Configure Debug (gcc 14)
         run: cmake --preset gcc-14-debug -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
+
+      - name: Build Debug (gcc 14)
+        run: cmake --build build/gcc-14-debug
+
+      - name: Run test Debug (gcc 14)
+        run: ctest ---test-dir build/gcc-14-debug
+
+      - name: Install Debug (gcc 14)
+        run: cmake --install build/gcc-14-debug  --prefix ./install/gcc-14-debug
