--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -4,19 +4,12 @@ name: Build-Branch
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
-  #  branches: [ "main" ]
-  #pull_request:
-  #  branches: [ "main" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  build-gcc13:
     # The type of runner that the job will run on
     runs-on: ubuntu-24.04
 
@@ -30,13 +23,30 @@ jobs:
           submodules: recursive
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          pwd
-          ls -la .
-          env
-          ninja --version
-          cmake --version
+      - name: CMake Configure Debug (gcc 13)
+        run: cmake --preset gcc-13-debug -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
+
+      - name: Build Debug (gcc 13)
+        run: cmake --build build/gcc-13-debug
+
+      - name: Run test Debug (gcc 13)
+        run: ctest --test-dir build/gcc-13-debug --verbose
+
+      - name: Install Debug (gcc 13)
+        run: cmake --install build/gcc-13-debug  --prefix ./install/gcc-13-debug
+
+  build-gcc14:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-24.04
+
+    steps:
+      - name: Checkout FuseEngine
+        uses: actions/checkout@v4
+        with:
+          repository: spinell/FuseEngine
+          ref: dev
+          token: ${{ secrets.PAT }}
+          submodules: recursive
 
       # Runs a set of commands using the runners shell
       - name: CMake Configure Debug (gcc 14)
@@ -46,7 +56,7 @@ jobs:
         run: cmake --build build/gcc-14-debug
 
       - name: Run test Debug (gcc 14)
-        run: ctest --test-dir build/gcc-14-debug
+        run: ctest --test-dir build/gcc-14-debug --verbose
 
       - name: Install Debug (gcc 14)
         run: cmake --install build/gcc-14-debug  --prefix ./install/gcc-14-debug
