--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -10,74 +10,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-gcc13:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-24.04
-    env:
-        BUILD_DIR: "build/gcc-13-debug"
-        INSTALL_DIR: "install/gcc-13-debug"
-
-    steps:
-      - name: Checkout FuseEngine
-        uses: actions/checkout@v4
-        with:
-          repository: spinell/FuseEngine
-          ref: dev
-          token: ${{ secrets.PAT }}
-          submodules: recursive
-
-      # Runs a set of commands using the runners shell
-      - name: CMake Configure Debug (gcc 13)
-        run: cmake --preset gcc-13-debug -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
-
-      - name: Build Debug (gcc 13)
-        run: cmake --build ${{env.BUILD_DIR}}
-
-      - name: Run test Debug (gcc 13)
-        run: ctest --test-dir ${{env.BUILD_DIR}} --verbose
-
-      - name: Install Debug (gcc 13)
-        run: cmake --install ${{env.BUILD_DIR}}  --prefix ${{env.INSTALL_DIR}}
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: install-ubuntu-gcc-13-debug
-          path: ${{env.INSTALL_DIR}}
-
-  build-gcc14:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-24.04
-    env:
-        BUILD_DIR: "build/gcc-14-debug"
-        INSTALL_DIR: "install/gcc-14-debug"
-
-    steps:
-      - name: Checkout FuseEngine
-        uses: actions/checkout@v4
-        with:
-          repository: spinell/FuseEngine
-          ref: dev
-          token: ${{ secrets.PAT }}
-          submodules: recursive
-
-      # Runs a set of commands using the runners shell
-      - name: CMake Configure Debug (gcc 14)
-        run: cmake --preset gcc-14-debug -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
-
-      - name: Build Debug (gcc 14)
-        run: cmake --build ${{env.BUILD_DIR}}
-
-      - name: Run test Debug (gcc 14)
-        run: ctest --test-dir ${{env.BUILD_DIR}} --verbose
-
-      - name: Install Debug (gcc 14)
-        run: cmake --install ${{env.BUILD_DIR}}  --prefix ${{env.INSTALL_DIR}}
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: install-ubuntu-gcc-14-debug
-          path: ${{env.INSTALL_DIR}}
-
   linux:
     name: ${{ matrix.os }}-${{ matrix.compiler.cc }}-${{ matrix.compiler.version }}-${{ matrix.buildConfig }}
     runs-on: ${{ matrix.os }}
@@ -90,7 +22,7 @@ jobs:
           #- { cc: gcc, cxx: g++, version: 12} GCC 12 does not support std::format
           - { cc: gcc, cxx: g++, version: 13}
           - { cc: gcc, cxx: g++, version: 14}
-          - { cc: clang, cxx: clang++, version: 16 }
+          #- { cc: clang, cxx: clang++, version: 16 } build fail
           - { cc: clang, cxx: clang++, version: 17 }
           - { cc: clang, cxx: clang++, version: 18 }
     env:
