--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -162,13 +162,31 @@ jobs:
           submodules: recursive
 
       - name: CMake Configure
-        env:
-          CC: "${{ matrix.compiler.cc }}-${{ matrix.compiler.version }}"
-          CXX: "${{ matrix.compiler.cxx }}-${{ matrix.compiler.version }}"
         run: |
+          # Try to find clang path
+          if [[ ${{ matrix.compiler.cc }} == "clang" ]];
+          then
+            if [[ ${{ matrix.os }} == "macos-15" && ${{matrix.compiler.version }} == "18" ]];
+            then
+              CC=$(brew --prefix llvm@${{matrix.compiler.version}})/bin/clang
+              CXX=$(brew --prefix llvm@${{matrix.compiler.version}})/bin/clang++
+            elif [[ ${{ matrix.os }} == "macos-14" && ${{matrix.compiler.version }} == "15" ]];
+            then
+              CC=$(brew --prefix llvm@${{matrix.compiler.version}})/bin/clang
+              CXX=$(brew --prefix llvm@${{matrix.compiler.version}})/bin/clang++
+            elif [[ ${{ matrix.os }} == "macos-13" && ${{matrix.compiler.version }} == "15" ]];
+            then
+              CC=$(brew --prefix llvm@${{matrix.compiler.version }})/bin/clang
+              CXX=$(brew --prefix llvm@${{matrix.compiler.version }})/bin/clang++
+            else
+              CC=/usr/bin/clang
+              CXX=/usr/bin/clang++
+            fi
+          fi
+
           cmake --preset osx \
           -B ${{env.BUILD_DIR}} \
           -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake \
           -DCMAKE_BUILD_TYPE=${{matrix.buildConfig}} \
-          -DCMAKE_C_COMPILER=${{env.CC}} \
-          -DCMAKE_CXX_COMPILER=${{env.CXX}}
+          -DCMAKE_C_COMPILER=$CC \
+          -DCMAKE_CXX_COMPILER=$CXX
