--- a/.github/workflows/BuildBranch.yml
+++ b/.github/workflows/BuildBranch.yml
@@ -190,3 +190,17 @@ jobs:
           -DCMAKE_BUILD_TYPE=${{matrix.buildConfig}} \
           -DCMAKE_C_COMPILER=$CC \
           -DCMAKE_CXX_COMPILER=$CXX
+
+      - name: Running cmake build ...
+        run: cmake --build ${{env.BUILD_DIR}} --config ${{ matrix.buildConfig }}
+
+      - name: Running tests ...
+        run: ctest --test-dir ${{env.BUILD_DIR}} --build-config ${{ matrix.buildConfig }}
+
+      - name: Running cmake install ...
+        run: cmake --install ${{env.BUILD_DIR}}  --prefix ${{env.INSTALL_DIR}} --config ${{ matrix.buildConfig }}
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: install-windows-${{ matrix.buildConfig }}
+          path: ${{env.INSTALL_DIR}}
