--- a/.github/workflows/TestCheckoutRepoAction.yml
+++ b/.github/workflows/TestCheckoutRepoAction.yml
@@ -1,4 +1,4 @@
-name: TestCheckoutRepoAction
+name: Test-CheckoutRepoAction
 description: 'Test custom acton'
 
 on:
@@ -14,6 +14,6 @@ jobs:
   linux:
     runs-on: ubuntu-24.04
     steps:
-      - uses: ./.github/actions/clone-repo.yml
+      - uses: ./.github/actions/clone-repo
         with:
           branch: ${{ inputs.branch }}
