--- a/.github/actions/clone-repo/action.yml
+++ b/.github/actions/clone-repo/action.yml
@@ -8,6 +8,9 @@ inputs:
   branch:
     description: 'The branch to checkout'
     required: true
+  github-token:
+    description: The GitHub token to use.
+    required: true
 
 runs:
   using: "composite"
@@ -17,6 +20,6 @@ runs:
      with:
       repository: spinell/FuseEngine
       ref: ${{ inputs.branch }}
-      token: ${{ secrets.PAT }}
+      token: ${{ inputs.github-token }}
       submodules: recursive
       fetch-depth: 0
