--- a/.github/workflows/BuildBranch-Windoww2022.yml
+++ b/.github/workflows/BuildBranch-Windoww2022.yml
@@ -14,6 +14,10 @@ on:
         type: 'boolean'
         default: true
 
+  pull_request:
+    types:  opened
+    branches: main
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
@@ -57,6 +61,7 @@ jobs:
             -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake `
             -DCMAKE_COMPILE_WARNING_AS_ERROR=${{ github.event.inputs.warningsAsErrors }}
 
+      - uses: ammaraskar/msvc-problem-matcher@0.3.0
       - run: cmake --build    ./build-cl --config       ${{ matrix.buildConfig }}
       - run: ctest --test-dir ./build-cl --build-config ${{ matrix.buildConfig }} --rerun-failed --output-on-failure
       - run: cmake --install  ./build-cl --prefix       ${{ env.INSTALL_DIR}}     --config ${{ matrix.buildConfig }}
